upgrade dependencies, fix publish github actions, use List.of instead of Arrays.asList